--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-# Replace with your DB credentials!
-DATABASE_URL="postgres://user:password@host:port/db-name"
+# Vendure server URL (for SvelteKit storefront)
+VENDURE_API_URL=http://localhost:3000/shop-api
+VENDURE_ADMIN_API_URL=http://localhost:3000/admin-api
