--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"db:push": "drizzle-kit push",
-		"db:generate": "drizzle-kit generate",
-		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"lint:fix": "prettier --write . && eslint --fix .",
+		"ui": "npx shadcn-svelte@latest"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
@@ -27,8 +25,7 @@
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.17",
 		"@types/node": "^24",
-		"drizzle-kit": "^0.31.8",
-		"drizzle-orm": "^0.45.0",
+		"bits-ui": "^1.8.0",
 		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.13.1",
@@ -38,12 +35,16 @@
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"svelte": "^5.45.6",
 		"svelte-check": "^4.3.4",
+		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.48.1",
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
-		"postgres": "^3.4.7"
+		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.564.0",
+		"mode-watcher": "^1.1.0",
+		"tailwind-merge": "^3.4.1"
 	}
 }
