finished phase 1 and added some logs

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-# Vendure server URL (for SvelteKit storefront)
-VENDURE_API_URL=http://localhost:3000/shop-api
-VENDURE_ADMIN_API_URL=http://localhost:3000/admin-api
+# Environment variables are split per app:
+#
+# apps/server/.env    — Vendure server (DB, superadmin, cookie secret)
+# apps/storefront/.env — SvelteKit frontend (Vendure API URLs)
+#
+# See each app's .env for details. Copy .env.example → .env in each app directory.
