--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@ node_modules
 .vercel
 .netlify
 .wrangler
-/.svelte-kit
-/build
+**/.svelte-kit
+**/build
+**/dist
 
 # OS
 .DS_Store
@@ -21,6 +22,9 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Vendure
+**/static/assets
 
 # Claude Code
 .claude/settings.local.json
