--- a/package.json
+++ b/package.json
@@ -1,50 +1,17 @@
 {
 	"name": "yay-csa",
-	"private": true,
 	"version": "0.0.1",
-	"type": "module",
+	"private": true,
+	"workspaces": ["apps/*"],
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint .",
-		"lint:fix": "prettier --write . && eslint --fix .",
-		"ui": "npx shadcn-svelte@latest"
+		"dev": "concurrently --kill-others -n server,storefront -c blue,green \"npm run dev -w server\" \"npm run dev -w storefront\"",
+		"dev:server": "npm run dev -w server",
+		"dev:storefront": "npm run dev -w storefront",
+		"build": "npm run build -w server && npm run build -w storefront",
+		"build:server": "npm run build -w server",
+		"build:storefront": "npm run build -w storefront"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.4.0",
-		"@eslint/js": "^9.39.1",
-		"@sveltejs/adapter-auto": "^7.0.0",
-		"@sveltejs/kit": "^2.49.1",
-		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.17",
-		"@types/node": "^24",
-		"bits-ui": "^1.8.0",
-		"eslint": "^9.39.1",
-		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.13.1",
-		"globals": "^16.5.0",
-		"prettier": "^3.7.4",
-		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.7.2",
-		"svelte": "^5.45.6",
-		"svelte-check": "^4.3.4",
-		"tailwind-variants": "^0.2.1",
-		"tailwindcss": "^4.1.17",
-		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.48.1",
-		"vite": "^7.2.6"
-	},
-	"dependencies": {
-		"clsx": "^2.1.1",
-		"lucide-svelte": "^0.564.0",
-		"mode-watcher": "^1.1.0",
-		"tailwind-merge": "^3.4.1"
+		"concurrently": "^9.2.1"
 	}
 }
