--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -13,9 +13,11 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"lint:fix": "prettier --write . && eslint --fix .",
-		"ui": "npx shadcn-svelte@latest"
+		"ui": "npx shadcn-svelte@latest",
+		"generate-schema": "gql.tada generate-schema 'http://localhost:3000/shop-api' --output ./schema.graphql && gql.tada generate-output"
 	},
 	"devDependencies": {
+		"@0no-co/graphqlsp": "^1.15.2",
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.39.1",
 		"@sveltejs/adapter-auto": "^7.0.0",
@@ -43,8 +45,11 @@
 	},
 	"dependencies": {
 		"clsx": "^2.1.1",
+		"gql.tada": "^1.9.0",
+		"graphql": "^16.13.0",
 		"lucide-svelte": "^0.564.0",
 		"mode-watcher": "^1.1.0",
-		"tailwind-merge": "^3.4.1"
+		"tailwind-merge": "^3.4.1",
+		"valibot": "^1.2.0"
 	}
 }
