--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,16 +14,16 @@
     "start": "concurrently npm:start:*"
   },
   "dependencies": {
-    "@vendure/asset-server-plugin": "3.5.4",
-    "@vendure/core": "3.5.4",
-    "@vendure/dashboard": "3.5.4",
-    "@vendure/email-plugin": "3.5.4",
-    "@vendure/graphiql-plugin": "3.5.4",
+    "@vendure/asset-server-plugin": "^3.5.5",
+    "@vendure/core": "^3.5.5",
+    "@vendure/dashboard": "^3.5.5",
+    "@vendure/email-plugin": "^3.5.5",
+    "@vendure/graphiql-plugin": "^3.5.5",
     "dotenv": "17.3.1",
     "pg": "8.18.0"
   },
   "devDependencies": {
-    "@vendure/cli": "3.5.4",
+    "@vendure/cli": "^3.5.5",
     "concurrently": "9.2.1",
     "ts-node": "10.9.2",
     "typescript": "5.8.2"
