--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -20,6 +20,7 @@
 		"@0no-co/graphqlsp": "^1.15.2",
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.39.1",
+		"@lucide/svelte": "^0.575.0",
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.53.3",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
@@ -47,7 +48,6 @@
 		"clsx": "^2.1.1",
 		"gql.tada": "^1.9.0",
 		"graphql": "^16.13.0",
-		"lucide-svelte": "^0.575.0",
 		"mode-watcher": "^1.1.0",
 		"tailwind-merge": "^3.5.0",
 		"valibot": "^1.2.0"
